feat(dimens): Define common dimensions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TopMarket</string>
+    <string name="remaining_stocks">تنها %d عدد در انبار باقیست</string>
 </resources>
