--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TopMarket</string>
     <string name="remaining_stocks">تنها %d عدد در انبار باقیست</string>
+    <string name="price_discount">%1$d%%</string>
+    <string name="product_avaialble">موجود در انبار</string>
 </resources>
