feat(view): Show text on 'show more' text view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="products_latest">جدید ترین کالا</string>
     <string name="products_popular">محبوب ترین کالاها</string>
     <string name="products_top_rated">پرطرفدارترین کالاها</string>
+    <string name="show_all">مشاهده همه</string>
 </resources>
