--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="available_product_count">+%d کالا</string>
     <string name="home">خانه</string>
     <string name="categories">دسته بندی ها</string>
+    <string name="search_in">جستجو در</string>
 </resources>
