--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="home">خانه</string>
     <string name="categories">دسته بندی ها</string>
     <string name="search_in">جستجو در</string>
+    <string name="search_all_products">جستجو در همه ی کالاها</string>
 </resources>
