--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="categories">دسته بندی ها</string>
     <string name="search_in">جستجو در</string>
     <string name="search_all_products">جستجو در همه ی کالاها</string>
-    <string name="product_in_category">در دسته  <strong>%s</strong></string>
+    <!-- <string name="product_in_category">در دسته  <b>%s</b></string>-->
+    <string name="product_in_category">&lt;font color="#B3000000">از دسته &lt;/font> &lt;b>%s&lt;/b></string>
 </resources>
