feat(search): Create filter search appbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="product_in_category">&lt;font color="#B3000000">از دسته &lt;/font> &lt;b>%s&lt;/b></string>
     <string name="special_sale">فروش ویژه</string>
     <string name="app_amazing_suggestions">شگفت انگیز اختصاصی اپ</string>
+    <string name="filters">فیلترها</string>
 </resources>
