--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,9 @@
     <string name="special_sale">فروش ویژه</string>
     <string name="app_amazing_suggestions">شگفت انگیز اختصاصی اپ</string>
     <string name="filters">فیلترها</string>
+    <string name="most_sales">پرفروش ترین ها</string>
+    <string name="most_expensive">گران ترین ها</string>
+    <string name="cheapest">ارزان ترین ها</string>
+    <string name="newest">جدیدترین ها</string>
+    <string name="sorting">مرتب سازی</string>
 </resources>
