feat(search): Handle errors and show messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="cheapest">ارزان ترین ها</string>
     <string name="newest">جدیدترین ها</string>
     <string name="sorting">مرتب سازی</string>
+    <string name="retry">تلاش مجدد</string>
 </resources>
