--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,10 @@
     <string name="newest">جدیدترین ها</string>
     <string name="sorting">مرتب سازی</string>
     <string name="retry">تلاش مجدد</string>
+
+    <!-- Notification -->
+    <string name="sync_newest_proudcts_channel_name">Newest Products</string>
+    <string name="sync_newest_proudcts_channel_description">Background task for fetching new products</string>
+    <string name="newest_products_notification_title">تاپ مارکت</string>
+    <string name="newest_products_notification_content">%d کالای جدید اضافه شد.</string>
 </resources>
