--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,13 @@
     <string name="privacy">با ورود و یا ثبت نام در دیجی کالا شما &lt;a href=\"https://www.digikala.com/page/terms\"&gt; شرایط و قوانین &lt;/a&gt; استفاده از سرویس های سایت دیجی کالا و &lt;a href=\"https://www.digikala.com/page/privacy\"&gt; قوانین حریم خصوصی&lt;/a&gt; آن را می پذیرید.</string>
     <string name="error_email_is_empty">پست الکترونیک را وارد نمایید</string>
     <string name="error_invalid_email">ایمیل معتبر نیست</string>
+
+    <!-- Formatted date -->
+    <string name="years_till_due">%d سال پیش</string>
+    <string name="months_till_due">%d ماه پیش</string>
+    <string name="weeks_till_due">%d هفته پیش</string>
+    <string name="days_till_due">%d روز پیش</string>
+    <string name="hours_till_due">%d ساعت پیش</string>
+    <string name="minutes_till_due">%d دقیقه پیش</string>
+    <string name="moment_till_due">چند لحظه پیش</string>
 </resources>
