--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="error_empty_response">در دریافت اطلاعات خطایی رخ داده است!</string>
     <string name="error_not_found">صفحه ی مورد نظر یافت نشد</string>
     <string name="error_timeout">برقراری ارتباط با خطا مواجه شد</string>
-    <string name="user_comments_count">%d دیدگاه کاربران</string>
+    <string name="user_comments_count">%d نظر</string>
     <string name="question_answer_count">%d  پرسش و پاسخ</string>
     <string name="similar_products">محصولات مشابه</string>
 
