feat: Define new adapter to show list of cart products and add cart fragment to graph to see the result

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,5 +123,6 @@
     <string name="discount_title">کد تخفیف</string>
     <string name="apply_discount">اعمال کد تخفیف</string>
     <string name="type_discount_value">کد تخفیف را وارد کنید…</string>
+    <string name="cart">سبد خرید</string>
 
 </resources>
