feat: Implement the basic of the cart layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,7 @@
     <string name="guarantee_policy">گارانتی اصالت و سلامت فیزیکی کالا</string>
     <string name="digikala_name">دیجی‌کالا</string>
     <string name="in_stock">موجود در انبار دیجی‌کالا</string>
-    <string name="cart_discount">%d تومان تخفیف</string>
+    <string name="cart_discount">%s تومان تخفیف</string>
     <string name="save_in_next_order">ذخیره در لیست خرید بعدی</string>
     <string name="continue_purchase">ادامه فرآیند خرید</string>
 
