feat(map): Configure the initial state of the map view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,8 @@
     <string name="no_network_connection">خطا در اتصال به اینترنت…</string>
 
 
+    <!-- Profile -->
+    <string name="my_profile">دیجی‌کالای من</string>
+
+
 </resources>
