feat(view): Add fab button to save new address

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,7 @@
 
     <!-- Profile -->
     <string name="my_profile">دیجی‌کالای من</string>
+    <string name="approve">تایید</string>
 
 
 </resources>
